# depositoor

./: .gitignore  DEPLOY.md  README.md
backend/: Cargo.toml
backend/src/: db.rs  types.rs
backend/src/api/: mod.rs  sessions.rs
backend/tests/: contract_unit.rs  e2e_live.rs
backend/tests/common/: mod.rs
contracts/: .gitignore  README.md  foundry.toml  package-lock.json  sign_auth.mjs
contracts/script/: Deploy.s.sol  MineSalt.s.sol  deploy-all.sh  mine-vanity.sh  mine.mjs
contracts/src/: Create3Factory.sol  DepositoorDelegate.sol
contracts/src/mocks/: MockERC20.sol  MockWETH.sol
demo/src/app/: depositoor.css
frontend/: package.json
frontend/public/: docs.html
frontend/src/: App.css  App.tsx  LandingPage.tsx
frontend/src/components/: ChainLogo.tsx  ConnectWallet.css  ConnectWallet.tsx  DepositMethods.css  DepositMethods.tsx  PeerOnrampButton.css  PeerOnrampButton.tsx  QRContent.css  QRContent.tsx  Settings.css  Settings.tsx  SupportedAssets.css  SupportedAssets.tsx  WalletDropdown.css  WalletDropdown.tsx  WalletProvider.tsx
frontend/src/hooks/: useSession.ts
frontend/src/lib/: constants.ts  smart-wallets.ts  wallets.ts
