[package]
name = "depositoor"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Ethereum
alloy = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (DefiLlama API)
reqwest = { version = "0.12", features = ["json"] }

# Async streams
futures-util = "0.3"
async-stream = "0.3"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = "0.6"
hex = "0.4"
dotenvy = "0.15"

[dev-dependencies]
alloy = { version = "1", features = ["full", "node-bindings"] }
tokio = { version = "1", features = ["full", "test-util"] }
